syntax = "proto3";
package common;
option go_package = "elimClient/pbs/common";
import "proto/common/common.proto";

message backend_operate {
  common.req_head head = 1; //公共头部
  int32 type = 2; //操作类型
  string data = 3; //操作数据
}

message backend_operate_ack {
  common.ack_head head = 1; //公共头部
  int32 type = 2; //操作类型
  string data = 3; //操作数据
}

message cluster_operate {
  string publisher = 1; //发布者
  int32 type = 2; //操作类型
  string data = 3; //操作数据
}

message ids {
  repeated uint64 ids = 1; //id列表
}

message survival_map{
  map<uint32, survival_data> day_survival = 1; //下注
}

message survival_data{
  int64 player = 1; //玩家
  int64 bk = 2; //下注
  int64 rt = 3; //返回
  int64 rta = 4; //返回率
}

message bk_player {
  map<uint64, int64> player_bk_map = 1; //下注
}